[gd_scene load_steps=7 format=3 uid="uid://d38iisb1pkpnk"]

[ext_resource type="Texture2D" uid="uid://b8lbm1ojgqbva" path="res://resources/graphics/enemies/scout.png" id="1_2wcnj"]
[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_dwwf6"]
[ext_resource type="Shader" path="res://scenes/enemies/scout.gdshader" id="2_465pn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_drcri"]
shader = ExtResource("2_465pn")
shader_parameter/color = Color(0.894118, 0.835294, 0.733333, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8c3vn"]
radius = 54.0093

[sub_resource type="CircleShape2D" id="CircleShape2D_hjc4k"]
radius = 791.483

[node name="Scout" type="CharacterBody2D" groups=["Enity", "Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_dwwf6")

[node name="Scout" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_drcri")
position = Vector2(37, 7)
rotation = 1.5708
texture = ExtResource("1_2wcnj")
region_enabled = true
region_rect = Rect2(11, 0, 168, 225)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_8c3vn")

[node name="AttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_hjc4k")

[node name="LaserSpownPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpownPositions"]
position = Vector2(108, -29)

[node name="Marker2D2" type="Marker2D" parent="LaserSpownPositions"]
position = Vector2(113, 15)

[node name="Timers" type="Node" parent="."]

[node name="LaserTimer" type="Timer" parent="Timers"]

[node name="HitTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="_on_hit_timer_timeout"]
